--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -4,7 +4,7 @@
   <% @tag.each do |tag| %>
   <li>
     <%= link_to tag.name, tag_path(tag) %>
-    <%= link_to "delete", tag_path(@tag), method: :delete, data: {confirm:
+    <%= link_to "delete", tag_path(tag), method: :delete, data: {confirm:
 "Really delete the tag?"} %>
   </li>
   <% end %>
