--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,5 +1,6 @@
 <h1>Articles Tagged with <%= @tag.name %></h1>
-
+<%= link_to "delete", tag_path(@tag), method: :delete, data: {confirm:
+"Really delete the tag?"} %>
 <ul>
   <% @tag.articles.each do |article| %>
     <li>
